--- a/scniche_dev.verisoned.yaml
+++ b/scniche_dev.verisoned.yaml
@@ -1,4 +1,4 @@
-name: scniche6
+name: scniche
 channels:
   - nvidia
   - conda-forge
@@ -206,7 +206,6 @@ dependencies:
     - dask-expr==1.1.10
     - dask-image==2024.5.3
     - datashader==0.17.0
-    - dgl==2.4.0+cu124
     - distributed==2024.8.0
     - docrep==0.3.2
     - fasteners==0.19
@@ -290,7 +289,6 @@ dependencies:
     - scikit-learn==1.6.1
     - scikit-misc==0.3.1
     - scipy==1.13.1
-    - scniche==1.1.0
     - seaborn==0.13.2
     - session-info==1.0.1
     - shapely==2.0.7
@@ -307,9 +305,6 @@ dependencies:
     - threadpoolctl==3.6.0
     - tifffile==2024.8.30
     - toolz==1.0.0
-    - torch==2.4.0
-    - torchaudio==2.4.0+cu124
-    - torchvision==0.19.0+cu124
     - tqdm==4.67.1
     - triton==3.0.0
     - typeguard==4.4.4
